# agent-lab

./: README.md  pyproject.toml
examples/: model_with_tool.py  stream_output.py  weather_forecasting_agent.py
langchain-examples/: model_stream_output.py
langchain-examples/agents/: dynamic_model.ipynb  dynamic_prompt.ipynb  stream_output.ipynb  tool_access_context.ipynb  tool_access_state.ipynb  tool_access_store.ipynb
langchain-examples/models/: batch_output.ipynb  chat_model.ipynb  messages.ipynb  reasoning.ipynb  stream_output.ipynb
langchain-examples/quick-start/: get_weather.py  get_weather_agent.ipynb  weather_forecasting_agent.ipynb
langgraph-examples/interrupts/: interrupt.ipynb
langgraph-examples/persistence/: replay_and_fork.ipynb  store_in_langgraph.ipynb  threads.ipynb
langgraph-examples/streaming/: token_by_token.ipynb  updates_and_values.ipynb
projects/chatbot/: README.md  plot_graph.py  pyproject.toml
projects/chatbot/src/chatbot/: agents.py
projects/chatbot/src/chatbot/cli/: cli.py
projects/chatbot/src/chatbot/components/: models.py  nodes.py  state.py
projects/chatbot/src/chatbot/tools/: builtin.py
projects/chatbot/src/chatbot/utils/: commands.py
projects/dataagent-demo/: pyproject.toml
projects/dataagent-demo/src/dataagent_demo/: __init__.py
projects/deepsearch-demo/examples/: ai_trends_2026.sh
projects/deepsearch-demo/src/deepsearch_demo/: agents.py  cli.py  schema.py  state.py  tools.py  utils.py
src/agent_lab/: model_hub.py
